--- a/templates/base.html
+++ b/templates/base.html
@@ -202,7 +202,7 @@
 
 
     <!-- MENSAJES -->
-    {% if messages and page != "login" %}
+    {% if messages and page != "login" and page != "crear_funcionario" %}
         <div class="container">
 
             {% for message in messages %}
