--- a/templates/home_ciudadano.html
+++ b/templates/home_ciudadano.html
@@ -120,7 +120,7 @@
                 <h1 class="mb-2">Hola, {{ user.first_name|default:user.username }} 👋</h1>
                 <p class="mb-0">
                     Desde aquí puedes reportar microbasurales en tu barrio. Selecciona la ubicación en el
-                    mapa, agrega una descripción y una fotografía opcional. Nuestro equipo municipal hará el
+                    mapa, agrega una descripción y una fotografía. Nuestro equipo municipal hará el
                     seguimiento correspondiente.
                 </p>
             </div>
